--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="Collection.html"><button class="headerbutton">Shop Now</button></a>
         </div>
         <div class="headerimg">
-            <img src="https://source.unsplash.com/random/300x300/?fashion">
+            <img src="Picture/images.jpeg">
         </div>
     </div>
     <!--Service-->
@@ -80,23 +80,23 @@
     </div>
     <div class="newarraival">
         <div class="newarraival1">
-            <img src="https://source.unsplash.com/random/200x200/?fashion?1">
+            <img src="Picture/new1.jpeg">
             <a href="Collection.html"><button>Shop Now</button></a>
         </div>
         <div class="newarraival1">
-            <img src="https://source.unsplash.com/random/200x200/?fashion?2">
+            <img src="Picture/new2.jpeg">
             <a href="Collection.html"><button>Shop Now</button></a>
         </div>
         <div class="newarraival1">
-            <img src="https://source.unsplash.com/random/200x200/?fashion?3">
+            <img src="Picture/new5.jpeg">
             <a href="Collection.html"><button>Shop Now</button></a>
         </div>
         <div class="newarraival1">
-            <img src="https://source.unsplash.com/random/200x200/?fashion?4">
+            <img src="Picture/new4.jpeg">
             <a href="Collection.html"><button>Shop Now</button></a>
         </div>
         <div class="newarraival1">
-            <img src="https://source.unsplash.com/random/200x200/?fashion?5">
+            <img src="Picture/new3.jpeg">
             <a href="Collection.html"><button>Shop Now</button></a>
         </div>
     </div>
@@ -106,23 +106,23 @@
     </div>
     <div class="newarraival">
         <div class="newarraival1">
-            <img src="https://source.unsplash.com/random/200x200/?fashion?6">
+            <img src="Picture/most1.jpeg">
             <a href="Collection.html"><button>Shop Now</button></a>
         </div>
         <div class="newarraival1">
-            <img src="https://source.unsplash.com/random/200x200/?fashion?7">
+            <img src="Picture/most2.jpeg">
             <a href="Collection.html"><button>Shop Now</button></a>
         </div>
         <div class="newarraival1">
-            <img src="https://source.unsplash.com/random/200x200/?fashion?8">
+            <img src="Picture/most3.jpeg">
             <a href="Collection.html"><button>Shop Now</button></a>
         </div>
         <div class="newarraival1">
-            <img src="https://source.unsplash.com/random/200x200/?fashion?9">
+            <img src="Picture/most5.jpeg">
             <a href="Collection.html"><button>Shop Now</button></a>
         </div>
         <div class="newarraival1">
-            <img src="https://source.unsplash.com/random/200x200/?fashion?9">
+            <img src="Picture/most4.jpeg">
             <a href="Collection.html"><button>Shop Now</button></a>
         </div>
     </div>
