--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nostra</title>
+    <title>Style</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body>
     <!--Nav Bar-->
     <nav class="navheader">
-        <h1>Nostra</h1>
+        <h1>Style</h1>
         <div class="navlinks">
             <p class="navlinks"><a href="index.html">Home</a></p>
             <p class="navlinks"><a href="Collection.html">Collections</a></p>
@@ -55,12 +55,12 @@
     </div>
     <!--Footer-->
     <div class="footer">
-        <h1>Nostra</h1>
+        <h1>Style</h1>
         <p>Style is a way to say who you are without having to speak</p>
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-facebook"></i>
-        <p>@ 2024 Nostra.com</p>
+        <p>@ 2024 Style.com</p>
     </div>
     <script src="script.js"></script>
 </body>
